* Added a corresponds of Newly Added languages.

--- a/README.ja
+++ b/README.ja
@@ -195,21 +195,68 @@ text-translator-site-data-alist
     言語を表わす2文字は, 現在のところ以下のようになっていま
     す.
 
-        en : English
-        ja : Japanese
-        ch : Chinese(simplifiedChinese)
-        tw : Chinese(traditionalChinese)
-        ko : Korean
-        es : Spanish
-        fr : French
-        de : German
-        it : Italian
-        ar : Arabia
-        pt : Portuguese
-        ru : Russian
-        nl : Dutch
-        el : Greek
-        no : Norwegian
+        en : 英語
+        ja : 日本語
+        es : スペイン語
+        is : アイスランド語
+        ga : アイルランド語
+        az : アゼルバイジャン語
+        af : アフリカーンス語
+        ar : アラビア語
+        sq : アルバニア語
+        hy : アルメニア語
+        it : イタリア語
+        yi : イディッシュ語
+        id : インドネシア語
+        cy : ウェールズ語
+        uk : ウクライナ語
+        ur : ウルドゥ語
+        et : エストニア語
+        nl : オランダ語
+        ca : カタロニア語
+        gl : ガリシア語
+        el : ギリシャ語
+        ka : グルジア語
+        ht : クレオール語(ハイチ)
+        hr : クロアチア語
+        sv : スウェーデン語
+        es : スペイン語
+        sk : スロバキア語
+        sl : スロベニア語
+        sw : スワヒリ語
+        sr : セルビア語
+        th : タイ語
+        tl : タガログ語
+        cs : チェコ語
+        da : デンマーク語
+        de : ドイツ語
+        tr : トルコ語
+        no : ノルウェー語
+        eu : バスク語
+        hu : ハンガリー語
+        hi : ヒンディー語
+        fi : フィンランド語
+        fr : フランス語
+        bg : ブルガリア語
+        vi : ベトナム語
+        iw : ヘブライ語
+        be : ベラルーシ語
+        fa : ペルシア語
+        pl : ポーランド語
+        pt : ポルトガル語
+        mk : マケドニア語
+        mt : マルタ語
+        ms : マレー語
+        la : ラテン語
+        lv : ラトビア語
+        lt : リトアニア語
+        ro : ルーマニア語
+        ru : ロシア語
+        en : 英語
+        ko : 韓国語
+        ja : 日本語
+        ch : 中国語(簡体字)
+        tw : 中国語(繁体字)
 
 text-translator-default-engine
   デフォルトで使用する翻訳サイト.
