add note about "this package is not working".

--- a/README.en
+++ b/README.en
@@ -1,3 +1,5 @@
+NOTE: Sorry. This package is not working.
+
 translates the character string on Emacs.
 this packages use the text translation service that exists
 on the Internet.
